[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "odeenvs"
authors = [{name = "David Boetius", email = "david.boetius@uni-konstanz.de"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "gymnasium == 0.29.1",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
develop = [
    "flit==3.9.0",
    "black==24.4.2",
]
all = ["odeenvs[develop]"]
