[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "odeenvs"
authors = [{name = "David Boetius", email = "david.boetius@uni-konstanz.de"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "numpy >= 2.1.1, <3.0",
    "gymnasium == 0.29.1",
    "pygame >= 2.6.0, <3.0",
    "matplotlib >= 3.9.2, <4.0",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = [
    "pytest >=8.2.2, <9.0"
]
develop = [
    "flit==3.9.0",
    "black==24.4.2",
]
all = ["odeenvs[test,develop]"]

[tool.pytest.ini_options]
testpaths = ["tests"]

